# Sudoku-AI-Solver-Pro-Advanced-Constraint-Solving-Algorithm-Visualization-System

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  server.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml
backend/: main.py
backend/heuristics/: degree.py  lcv.py  mrv.py
backend/solver/: ac3.py  backtracking.py  csp.py  dlx.py  utils.py
frontend/: app.js  index.html  style.css
