[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-ai-solver-pro"
version = "1.0.0"
description = "Advanced Sudoku Solver using CSP, AC3, DLX"
authors = [
    { name="manucian-official", email="khoigaming2102pro@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn"
]

[project.urls]
Homepage = "https://github.com/ManucianTeam/Sudoku-AI-Solver-Pro-Advanced-Constraint-Solving-Algorithm-Visualization-System"